$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-07-13 [B] Fixed error message when regular users try to delete their albums in public categories {eenemeenemuu}
2010-07-13 [M] Re-organizing zip archives inside docs folder {GauGau}
2010-07-12 [D] Adding documentation about plugin config options {GauGau}
2010-07-09 [B] Fixed issue when reset file ratings (thread ID 65896) {eenemeenemuu}
2010-07-05 [B] Fixed empty values for 'reason' in 'report to administrator' email (thread ID 65752) {eenemeenemuu}
2010-07-05 [B] Fixed category view when albums with keywords are present (thread ID 64155) {eenemeenemuu}
2010-07-05 [B] Changed type of plugin hooks 'theme_thumbnails_wrapper_start/end' from 'filter' to 'action' and adjusted English documentation accordingly (thread ID 58734) {eenemeenemuu}
2010-07-05 [A] Added search terms to the title of the thumbnails page (thread ID 65840) {eenemeenemuu}
2010-07-05 [A] Added Japanese language file (user contribution) {GauGau}
2010-07-02 [D] Adding boxes to config documentation for defaults, max, min, recomended and record name {GauGau}
2010-06-30 [B] Display Coppermine news always in an iframe (thread ID 65424) {eenemeenemuu}
2010-06-29 [B] Fixed error message for non existing categories (thread ID 65763) {eenemeenemuu}
2010-06-26 [B] Replaced wrong link in update.php (thread ID 65714) {GauGau}
2010-06-25 [B] Added language table population section to update script to stop cpg1.4.x upgrades seing only Luxemburgish and Mexican as available langauges {GauGau}
2010-06-25 [O] Updated Turkish language file (user contribution) {eenemeenemuu}